Bug 34117: setxkbmap -I dir not accepted, despite man page

Easy enough to accept the syntax documented in the man page, so accept
the -I flag with or without a space between -I and the directory argument.

https://bugs.freedesktop.org/show_bug.cgi?id=34117

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>
Reviewed-by: Dirk Wallenstein <halsmit@t-online.de>
Reviewed-by: Dan Nicholson <dbn.lists@gmail.com>